openshift/helm/label-studio/patches/route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: label-studio
  namespace: label-studio
spec:
  to:
    kind: Service
    name: app-label-studio-ls-app
    weight: 100
  port:
    targetPort: service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
